# cw4_parser

./: JSON_FINAL.json  JSON_HH.json  JSON_SJ.json  Python.json  README.md  main.py  pyproject.toml
data/: Python_hh.json  token_sj.py
helper/: examples.py  parametres.txt
src/: abstracts_classes.py  headhunter_api.py  jsonsaver.py  superjob_api.py  user_interface.py  vacancy.py
tests/: run_hh.py  run_sj.py
